# gradient-extremals-on-manifolds

./: .gitignore  README.md  setup.cfg
examples/: DataSample.py  DataSampleSimplified.py  DielsAlder_KnownCV.py  DielsAlder_dmaps.py  DielsAlder_dmaps_simplified.py  SimplePotential.py  SimplePotential_On_Sphere.py  SphericalMB.py  SphericalMB_On_Sphere.py  SphericalMB_Sampling.py  SphericalMB_Sampling_Oops.py  SphericalZorro.py  SphericalZorro_On_Sphere.py  utils.py
src/gradient_extremals_on_manifolds/: Continuation.py  DiffGeom_Potential.py  DiffusionMapCoordinates.py  Metropolis.py  Potential.py  Sampler.py  diffusion_maps.py  distances.py  gaussian_process.py  procrustes.py  utils.py
