[metadata]
name = gradient_extremals_on_manifolds
version = 0.0.1
summary = Implementation of Gradient Extremals on manifolds defined by point-clouds.
author = Anastasia Georgiou
author_email = ageorgi3@jhu.edu
url = https://github.com/tasiag/gradient_extremals_on_manifolds.git

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8

install_requires = 
    ipython
    jaxlib
    jax
    matplotlib
    mayavi
    numpy
    pyside6
    scipy

[options.packages.find]
where = src
include = gradient_extremals_on_manifolds

[flake8]
ignore = E402,W503